--- a/요구사항.md
+++ b/요구사항.md
@@ -3,8 +3,8 @@ Advanced Challenge test
 
 Step 1 - 숫자 버튼을 누르고 화면에 숫자를 입력하기
 
-- [ ] 숫자 버튼을 눌렀을 때, 계산기 화면에 숫자가 보여야 합니다.
-- [ ] 숫자 버튼을 여러 번 눌렀을 때, 계산기 화면에 숫자가 이어붙여져야(concatenation) 합니다.
+- [V] 숫자 버튼을 눌렀을 때, 계산기 화면에 숫자가 보여야 합니다.
+- [V] 숫자 버튼을 여러 번 눌렀을 때, 계산기 화면에 숫자가 이어붙여져야(concatenation) 합니다.
 
 Step2 - Enter 버튼, AC 버튼 동작시키기
 
